0.01h finished
* Fix downloading (increase speed)

* Show progress

* Working stub for launching game